Kubernetes/Deployments/Grafana/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-grafana
  namespace: monitoring
  labels:
    app: redis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              name: redis-port
---
apiVersion: v1
kind: Service
metadata:
  name: redis-grafana
  namespace: monitoring
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
