Kubernetes/Deployments/Grafana/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.domain.com`)
      kind: Rule
      middlewares:
        - name: default-headers
      services:
        - name: grafana
          port: 80
  tls:
    secretName: mubuyu-tls
